src/objects/Case_Escalation_Matrix__mdt.object
<CustomObject>
    <description>This is used to update deadline field based on certain rules</description>
    <fields>
        <fullName>Escalation_Hours__c</fullName>
        <label>Escalation Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>This is used to store Case Priority</description>
        <inlineHelpText>Fill same value as Case Priority</inlineHelpText>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry</fullName>
                    <default>true</default>
                    <label>Inquiry</label>
                </value>
                <value>
                    <fullName>MB Complaint</fullName>
                </value>
                <value>
                    <fullName>MB_Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Escalation Matrix</label>
    <pluralLabel>Case Escalation Matrix</pluralLabel>
</CustomObject>